--- a/.github/workflows/lwc-test-runner.yml
+++ b/.github/workflows/lwc-test-runner.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
     - 'feature/*'
+  workflow_dispatch:
 
 jobs:
   build_and_test:
@@ -15,13 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
-    - name: Install lwc-jest and dependencies
-      run: |
-        npm install
-        npm install @salesforce/sfdx-lwc-jest --save-dev
+    - name: Install lwc-jest
+      run: npm install @salesforce/sfdx-lwc-jest@0.9.2 --save-dev
     - name: Run Unit Tests
       run: npm run test:unit
